# croissant-action

./: .gitignore  Makefile  README.md  action.yaml  pyproject.toml
.github/workflows/: test.yaml
src/croissant_uploader/: __main__.py  extractor.py  results.py  uploader.py
tests/: test_extractor.py
tests/test_data/: foofailure.xml  fooskipped.xml  foosuccess.xml  multiplepytestfiles.xml  multiplesuites.xml
tests/test_data/folder/: a.xml  b.xml
tests/test_data/folder/nested_folder/: c.xml
